...
                        } label: {
                            Image(systemName: "questionmark.circle")
                                .font(.system(size: 30))
                                .frame(width: 44, height: 44)
                        }
                        .accessibilityLabel(Text("Help"))
                        .accessibilityIdentifier("SettingsHelpButton")
                        Button { dismiss() } label: {
                            Image(systemName: "xmark")
                                .font(.system(size: 30))
                                .frame(width: 44, height: 44)
                        }
                        .accessibilityLabel(Text(LocalizationManager.close))
...
